--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <section></section>
-    <div id="react-container"></div>
+    <div class="row">
+    <div class="col-sm-12">
+        <label class="template draggable" >Run Lines</label>
+    </div>
+    </div>
+    <div id="react-container" class="row"></div>
     <script src="js/jquery.shapeshift.min.js"></script>
     <script src="js/Note.js" type="text/babel" ></script>
 <!--     <script src="js/Board.js" type="text/babel" ></script> -->
