--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,13 @@
     </div>
     </div>
     <div id="react-container" class="row"></div>
+    <script src="js/d3-3.5.5.js"></script>
+    <script src="js/crossfilter.min-1311.js"></script>
+    <script src="js/dc-1.7.3.js"></script>
     <script src="js/jquery.shapeshift.min.js"></script>
     <script src="js/Note.js" type="text/babel" ></script>
-<!--     <script src="js/Board.js" type="text/babel" ></script> -->
+    <script src="js/Chart.js" type="text/babel" ></script>
+    <script src="js/Board.js" type="text/babel" ></script>
 </div>
 </body>
 </html>
